# sscpp-task123

./: CMakeLists.txt  readme.md
task1/: stringlist.cpp  stringlist.h  test.cpp
task2/: anytype.h  generate.py  gentest.py  main.cpp  test.cpp
task3/: FileFinder.cpp  FileFinder.h  FileStats.cpp  FileStats.h  MT.cpp  MT.h  gets_string.cpp  gets_string.h  task3.cpp  test_stats.cpp
